<?xml version="1.0"?>
<package format="2">
  <name>enc_query</name>
  <version>0.0.0</version>
  <description>The traffic_sim package</description>

  <maintainer email="tsd1009@wildcats.unh.edu">Thomas Donnelly</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>marine_msgs</depend>
  <depend>project11</depend>
  <export>
  </export>
</package>
