<?xml version="1.0"?>
<package format="2">
  <name>enc_query</name>
  <version>0.0.0</version>
  <description>The enc_query package</description>

  <maintainer email="tsd1009@wildcats.unh.edu">Thomas Donnelly</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>project11_msgs</depend>
  <depend>project11</depend>

  <build_depend> message_generation</build_depend>
  <exec_depend> message_runtime</exec_depend>
  <export>
  </export>
</package>
